			
	January 2012:
		- change indexing-stylesheets:
			- Replace hardcoded path in calls to escidoc-core-accessor with href taken from xml.
		- change exception-xml:
			- remove html-elements p and h1
			
  May 2012:
    - adapt mapping-mpdl2dc-onlyMD.xsl and mapping-mpdl2dc.xsl to support namespace-prefixes on attribute creator:role
      
changes since version 1.3
--------------------------
	May 2011:
		-change escidoc-login.xml:
			-upgrade spring-security schema to version 3.0
			-always surround authentication-provider-element with authentication-manager-element
			-change package-names of LDAP-classes
			-reorganize authentication-manager elements
			
	June 2011:
		-change escidoc-core.properties:
			-add property escidoc-core.compressionIsAccepted
			 defines if content (not binary) will be delivered gzip compressed
			-remove aa.cache properties as we now use eh-cache
			-remove property escidoc-core.om.indexer.cache.size as indexer-cache was removed

			
	July 2011:
		-springsecurity complains a session-fixation-protection-strategy execption
		 because it is not possible to copy a servlet-session to give it a new session-id.
		 This is a Problem of JBoss version 4.2.
		 Fix: provide the attribute emptySessionPath="false" in server.xml
		 --> server.xml in JBoss-Patch adapted.

changes since version 1.2
--------------------------
    December 2009:
        - change field length of table aa.invocation_mappings.path from 100 to 255.
        - Change sm table structure + sm-schemas (use objid or href, dependent on request).
    January 2010:
        -Upgrade to Lucene 3.0. Changes:
            -score is not calculated when searching with wildcard or range-query (<,>,<=,>=)
             due to performance-reasons. Anyway, it is configurable if scores are required.
            -Use quotes when searching for words starting with a digit.

        -Configuration for Search + Indexing externalized. Please see docu of Search + Browse Component.