@@ -21,6 +21,9 @@ changes since version 1.4
   May 2012:
     - adapt mapping-mpdl2dc-onlyMD.xsl and mapping-mpdl2dc.xsl to support namespace-prefixes on attribute creator:role
       
+  June 2012:
+    - return xml of method retrieveVersionHistory returns version-history in schema version 0.4
+      
 changes since version 1.3
 --------------------------
 	May 2011:
